<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".ui.home.HomeFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/lobbi1"
        style="@style/lobbiBtn"
        android:layout_marginBottom="25dp"
        android:text="@string/lobbiText1"
        app:layout_constraintBottom_toTopOf="@id/lobbi2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/lobbi2"
        style="@style/lobbiBtn"
        android:text="@string/lobbiText2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/lobbi3"
        style="@style/lobbiBtn"
        android:layout_marginTop="25dp"
        android:text="@string/lobbiText3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lobbi2" />

</androidx.constraintlayout.widget.ConstraintLayout>